<resources>
    <string name="app_name">FirebaseKotlin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_authors_name">Enter Author\'s Name</string>
    <string name="enter_authors_city">Enter Author\'s City</string>
    <string name="enter_authors_vote">Enter Author\'s Vote</string>
    <string name="add">Add</string>
    <string name="add_new_author">Add New Author</string>
    <string name="error_field_required">This Field Required</string>
    <string name="author_added">Author Successfully Added</string>
    <string name="error">Error: %1$s</string>
    <string name="edit_author">Edit Author</string>
    <string name="update">Update</string>
    <string name="delete_confirmation">Are you sure you want to delete?</string>
    <string name="yes">Yes</string>
</resources>